--- a/ArtFX_GameEngine/ArtFX_GameEngine.vcxproj
+++ b/ArtFX_GameEngine/ArtFX_GameEngine.vcxproj
@@ -298,14 +298,14 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Engine\Core\Physic\PhysicConstants.h" />
-    <Content Include="Engine\Core\Render\Shader\BasicMesh.frag" />
-    <Content Include="Engine\Core\Render\Shader\BasicMesh.vert" />
-    <Content Include="Engine\Core\Render\Shader\Collision.frag" />
-    <Content Include="Engine\Core\Render\Shader\Collision.vert" />
-    <Content Include="Engine\Core\Render\Shader\Simple.frag" />
-    <Content Include="Engine\Core\Render\Shader\Simple.vert" />
-    <Content Include="Engine\Core\Render\Shader\SpriteShader.frag" />
-    <Content Include="Engine\Core\Render\Shader\SpriteShader.vert" />
+    <Content Include="Shaders\BasicMesh.frag" />
+    <Content Include="Shaders\BasicMesh.vert" />
+    <Content Include="Shaders\Collision.frag" />
+    <Content Include="Shaders\Collision.vert" />
+    <Content Include="Shaders\Simple.frag" />
+    <Content Include="Shaders\Simple.vert" />
+    <Content Include="Shaders\SpriteShader.frag" />
+    <Content Include="Shaders\SpriteShader.vert" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
